
- Oracle: sped up restore operations by sending short blobs inline

- PostgreSQL: use the documented ALTER SEQUENCE RESTART WITH
  statement instead of ALTER SEQUENCE START WITH.

- Moved MD5 sum computation to the adapters so they can choose not
  to use MD5.

- Changed loadSerial to load from the store connection only if the
  load connection can not provide the object requested.

1.3.0b1 (2009-09-04)
--------------------

- Added support for a blob directory. No BlobStorage wrapper is needed.
  Cluster nodes will need to use a shared filesystem such as NFS or
  SMB/CIFS.

- Added the blob-dir parameter to the ZConfig schema and README.txt.


1.2.0 (2009-09-04)
------------------

- In Oracle, trim transaction descriptions longer than 2000 bytes.

- When opening the database for the first time, don't issue a warning
  about the inevitable POSKeyError on the root OID.

- If RelStorage tries to unpickle a corrupt object state during packing,
  it will now report the oid and tid in the log.


1.2.0b2 (2009-05-05)
--------------------

- RelStorage now implements IMVCCStorage, making it compatible with
  ZODB 3.9.0b1 and above.

- Removed two-phase commit support from the PostgreSQL adapter. The
  feature turned out to be unnecessary.

- Added MySQL 5.1.34 and above to the list of supportable databases.

- Fixed minor test failures under Windows. Windows is now a supportable
  platform.


1.1.3 (2009-02-04)
------------------

- In rare circumstances, ZODB can legitimately commit an object twice in a
  single transaction.  Fixed RelStorage to accept that.

- Auto reconnect to Oracle sometimes did not work because cx_Oracle was
  raising a different kind of exception than expected.  Fixed.

- Included LICENSE.txt in the source distribution.


1.1.2 (2009-01-27)
------------------

- When both cache-servers and poll-interval are set, we now poll the
  cache for changes on every request.  This makes it possible to use